Fixing overflow issue for large message recipient list.

--- a/app/client/src/styles/Organize.scss
+++ b/app/client/src/styles/Organize.scss
@@ -2,6 +2,7 @@
 
 .outerContainer {
   width: 100%;
+  overflow-x: hidden;
   margin-bottom: 5rem;
 
   .organizeNavHeader {
